<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/dogwallpaper"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="-66dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="192dp"
        android:layout_height="55dp"
        android:layout_marginBottom="48dp"
        android:shadowDx="5"
        android:shadowDy="0"
        android:shadowRadius="10"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textColor="@color/purple_500"
        android:textSize="35dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText_Register_Email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="example@mail.com"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:textColor="@color/black"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_Register_Name" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/email_input"
        android:textColor="@color/black"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@id/editText_Register_Email"
        app:layout_constraintStart_toStartOf="@id/editText_Register_Email" />

    <TextView
        android:id="@+id/phoneView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="276dp"
        android:layout_marginEnd="306dp"
        android:layout_marginBottom="433dp"
        android:text="Phone"
        android:textColor="@color/black"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_Register_Phone"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="0648096230"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:textColor="@color/black"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_Register_Name" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/name_input"
        android:textColor="@color/black"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@id/editText_Register_Name"
        app:layout_constraintStart_toStartOf="@id/editText_Register_Name" />

    <Button
        android:id="@+id/register_registerButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"

        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/register"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_register_registerButton" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_register_registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <EditText
        android:id="@+id/editText_Register_Name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="Lucija Stojkovic"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:textColor="@color/black"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_title" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/password_input_register"
        android:textColor="@color/black"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@id/editText_Register_Password"
        app:layout_constraintStart_toStartOf="@id/editText_Register_Password" />

    <Button
        android:id="@+id/register_registerLogin"
        android:layout_width="match_parent"
        android:layout_height="48dp"

        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/purple_200"
        android:text="@string/log_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_registerButton" />

    <EditText
        android:id="@+id/editText_Register_Password"
        android:layout_width="333dp"
        android:layout_height="52dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:textColor="@color/black"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_Register_Email" />

    <EditText
        android:id="@+id/editText_Register_ConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:textColor="@color/black"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_Register_Password" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/confirm_pass"
        android:textColor="@color/black"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@id/editText_Register_ConfirmPassword"
        app:layout_constraintStart_toStartOf="@id/editText_Register_ConfirmPassword" />

    <ImageView
        android:id="@+id/pic"
        android:layout_width="52dp"
        android:layout_height="43dp"
        android:layout_marginStart="309dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="647dp"
        android:src="@drawable/baseline_add_a_photo_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:clickable="true"/>


</androidx.constraintlayout.widget.ConstraintLayout>