<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout10"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentEditProfile">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:paddingBottom="40dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profile_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:background="@color/white"
            android:padding="5dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@id/guideline6"
            app:layout_constraintStart_toStartOf="parent"
            app:strokeColor="@color/purple_500"
            app:strokeWidth="2dp" />

        <ImageView
            android:id="@+id/imgUser"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:src="@drawable/baseline_person_outline_24"
            app:layout_constraintBottom_toBottomOf="@+id/profile_image"
            app:layout_constraintEnd_toEndOf="@+id/profile_image"
            app:layout_constraintStart_toStartOf="@+id/profile_image"
            app:layout_constraintTop_toTopOf="@+id/profile_image"
            app:tint="@color/purple_700" />


        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/email_input"
            app:layout_constraintBottom_toTopOf="@id/editText_edit_profile_email"
            app:layout_constraintStart_toStartOf="@id/editText_edit_profile_email" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/name_input"
            app:layout_constraintBottom_toTopOf="@id/editText_edit_profile_name"
            app:layout_constraintStart_toStartOf="@id/editText_edit_profile_name" />

        <EditText
            android:id="@+id/editText_edit_profile_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="40dp"

            android:ems="10"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline6" />

        <EditText
            android:id="@+id/editText_edit_profile_email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"

            android:ems="10"
            android:inputType="text"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editText_edit_profile_name" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.22" />

        <EditText
            android:id="@+id/editText_edit_profile_description"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"

            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editText_edit_profile_email" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/description_input"
            app:layout_constraintBottom_toTopOf="@id/editText_edit_profile_description"
            app:layout_constraintStart_toStartOf="@id/editText_edit_profile_description" />

        <!--        <ImageView-->
        <!--            android:id="@+id/imageView2"-->
        <!--            android:layout_width="48dp"-->
        <!--            android:layout_height="48dp"-->
        <!--            android:layout_marginStart="306dp"-->
        <!--            android:layout_marginTop="38dp"-->
        <!--            android:layout_marginEnd="57dp"-->
        <!--            android:layout_marginBottom="528dp"-->
        <!--            android:src="@drawable/baseline_favorite_border_24"-->
        <!--            app:layout_constraintBottom_toBottomOf="parent"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintHorizontal_bias="1.0"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toTopOf="parent"-->
        <!--            app:layout_constraintVertical_bias="0.225" />-->

        <TextView
            android:id="@+id/points"
            android:layout_width="75dp"
            android:layout_height="25dp"
            android:layout_marginStart="296dp"
            android:layout_marginTop="38dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="551dp"
            android:text="TextView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.225" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="548dp"
            android:layout_marginEnd="173dp"
            android:layout_marginBottom="58dp"
            android:text="Done"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="173dp"
            android:text="Back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>